--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   },
   "homepage": "https://github.com/ldechamps/meteor-react#readme",
   "dependencies": {
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.0.2",
+    "react-addons-create-fragment": "^15.0.2",
+    "react-addons-css-transition-group": "^15.0.2",
+    "react-addons-linked-state-mixin": "^15.0.2",
+    "react-addons-perf": "^15.0.2",
+    "react-addons-pure-render-mixin": "^15.0.2",
+    "react-addons-test-utils": "^15.0.2",
+    "react-addons-transition-group": "^15.0.2",
+    "react-addons-update": "^15.0.2",
+    "react-dom": "^15.0.2",
     "react-mounter": "^1.1.0"
   }
 }
